                * Billing :
                    - The module 'registry' is deprecated.
                    - The class 'views.base.BaseCreation' is deprecated.
                * Commercial :
                    - The constant 'DISPLAY_ONLY_ORGA_COM_APPROACH_ON_ORGA_DETAILVIEW' is deprecated;
                      use setting_keys.orga_approaches_key.id instead.
                * Projects :
                    - The method 'models.AbstractProjectTask.clone_scope()' is deprecated.
                * Crudity :
                    - The constant 'SETTING_CRUDITY_SANDBOX_BY_USER' is deprecated; '
                      use 'crudity.setting_keys.sandbox_key.id' instead.
        # In 'creme_core.models' :
            - The models 'CremeUser' gets a new method 'has_perm_or_die()' which raises exceptions with friendly error messages.
            - The model 'FileRef' gets a new optional field "description";
              it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
        # Javascript:
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH has been removed.
                - In the class 'mass_import.FormRegistry' :